Fixed align issues for grid on location page

--- a/static/collection_display.css
+++ b/static/collection_display.css
@@ -57,8 +57,11 @@ img {
 .gallery{
     margin-top: 1em;
     background-color: #86b3d1;
-      display: flex;
-  flex-wrap: wrap;
+    flex-wrap: wrap;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .main{
